--- a/index.html
+++ b/index.html
@@ -17,38 +17,37 @@
 
 <body>
   <div class="card-grid">
-    <div class="row">
+  <div class="row row-top">
       <a href="https://academy.atera.com/training/019883cf-3c4e-7911-9139-62154224f4c8/register?certification_id=019883ce-f0fd-740e-bac8-c3b035386c01" class="card">
-        <h2>Level 1</h2>
-        <p>Activate IT Autopilot</p>
-        <div class="icon">🔓</div>
-      </a>
-      <a href="#" class="card locked">
-        <h2>Level 2</h2>
-        <p>Activate your knowledge base</p>
-        <div class="icon">🔒</div>
-      </a>
-      <a href="#" class="card locked">
-        <h2>Level 3</h2>
-        <p>Enable Software Management</p>
-        <div class="icon">🔒</div>
-      </a>
-    </div>
-    <div class="row">
-      <a href="#" class="card locked">
-        <h2>Level 4</h2>
-        <p>Coming soon</p>
-        <div class="icon">🔒</div>
-      </a>
-      <a href="#" class="card locked">
-        <h2>Level 5</h2>
-        <p>Coming soon</p>
-        <div class="icon">🔒</div>
-      </a>
-    </div>
+      <h2>Level 1</h2>
+      <p>Activate IT Autopilot</p>
+      <div class="icon">🔓</div>
+    </a>
+    <a href="https://your-course-link.com/lesson2" class="card locked">
+      <h2>Level 2</h2>
+      <p>Activate your knowledge base</p>
+      <div class="icon">🔒</div>
+    </a>
+    <a href="#" class="card locked">
+      <h2>Level 3</h2>
+      <p>Enable Software Management</p>
+      <div class="icon">🔒</div>
+    </a>
   </div>
+  <div class="row row-bottom">
+    <a href="#" class="card locked">
+      <h2>Level 4</h2>
+      <p>Coming soon</p>
+      <div class="icon">🔒</div>
+    </a>
+    <a href="#" class="card locked">
+      <h2>Level 5</h2>
+      <p>Coming soon</p>
+      <div class="icon">🔒</div>
+    </a>
+  </div>
+</div>
 </body>
-
 </html>
 <!-- partial -->
   <script  src="./script.js"></script>
