--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <body>
   <div class="card-grid">
   <div class="row row-top">
-      <a href="https://academy.atera.com/training/019883cf-3c4e-7911-9139-62154224f4c8/register?certification_id=019883ce-f0fd-740e-bac8-c3b035386c01" class="card">
+      <a target="_top"
+ href="https://academy.atera.com/training/019883cf-3c4e-7911-9139-62154224f4c8/register?certification_id=019883ce-f0fd-740e-bac8-c3b035386c01" class="card">
       <h2>Level 1</h2>
       <p>Activate IT Autopilot</p>
       <div class="icon">🔓</div>
